# aqarati

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.vercel/: project.json
admin/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
admin/src/: App.tsx  i18n.ts  index.css  main.tsx
admin/src/api/: client.ts
admin/src/components/: Layout.tsx  Sidebar.tsx  ThemeProvider.tsx
admin/src/hooks/: useTheme.ts
admin/src/pages/: AuditLog.tsx  Dashboard.tsx  Organizations.tsx  PaymentProviders.tsx  Plans.tsx  Properties.tsx  Reports.tsx  Settings.tsx  Users.tsx
admin/src/shared/: i18n.ts  types.ts
backend/: Cargo.toml  aqarati-backend.service
backend/migrations/mysql/: 001_initial_schema.sql
backend/migrations/postgresql/: 001_initial_schema.sql  002_seed_data.sql  003_rbac_foundation.sql  004_plans_management.sql
backend/src/: config.rs  db.rs  main.rs
backend/src/api/: admin_plans.rs  guards.rs  mod.rs  resolvers.rs  schema.rs
backend/src/api/guards/: auth_guard.rs
backend/src/middleware/: jwt.rs
backend/src/resolvers/: mod.rs
backend/src/services/: auth.rs  billing.rs  contacts.rs  mod.rs  organization.rs  payment_provider.rs  property.rs  rbac.rs  search.rs  sharing.rs
mobile/: app.json  babel.config.js  package.json  tsconfig.json
mobile/android/: build.gradle  settings.gradle
mobile/android/app/: build.gradle
mobile/src/: App.tsx
mobile/src/api/: client.ts
shared/: i18n.ts  index.ts  package.json  theme.ts
web/: next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
web/src/: middleware.ts
(+39 files in other folders)
